--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.App {
+  text-align: center;
+}
+
 .main-bg {
   height: 300px;
   background-image: url('/public/img/bg.png');
@@ -5,41 +9,20 @@
   background-position: center;
 }
 
-.App {
-  text-align: center;
+h4 {
+  padding-top: 3rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 768px) {
+  h4 {
+    padding-top: 1rem;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  p {
+    font-size: 0.8rem;
+    margin-bottom: 0.8rem;
   }
-  to {
-    transform: rotate(360deg);
+  .btn {
+    padding: 0.2rem 0.6rem;
+    font-size: 0.8rem;
   }
 }
